[package]
name = "carbide_wgpu"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
keywords = ["ui", "gui", "interface", "graphics", "wgpu"]
description = "A crate to assist with rendering carbide UIs via wgpu."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]

[features]
controls = ["carbide_controls"]

[dependencies]
carbide_core = { path = "../../carbide_core" }
carbide_winit = { path = "../carbide_winit" }
carbide_lyon = { path = "../carbide_lyon" }
carbide_controls = { path = "../../carbide_controls", optional = true }
carbide_cosmic_text = { path = "../carbide_cosmic_text" }
log = "0.4"
wgpu.workspace = true
futures.workspace = true
bytemuck.workspace = true
walkdir.workspace = true
#smaa = "0.4.0"
typed-arena.workspace = true
once_cell.workspace = true
dashmap.workspace = true
accesskit_winit.workspace = true
accesskit.workspace = true
smallvec.workspace = true


[target.'cfg(target_os="macos")'.dependencies]
block = "0.1.6"
cocoa = "0.24.0"
objc = "0.2.7"
core-graphics = "0.22.0"
foreign-types = "0.3.2"

[dev-dependencies]
carbide_wgpu = { path = "../carbide_wgpu", features = ["controls"] }
carbide_winit = { path = "../carbide_winit" }
carbide_controls = { path = "../../carbide_controls" }
carbide_macro = { path = "../../carbide_macro" }
futures = "0.3"
async-std = { version = "1.10.0" }
reqwest = "0.11.22"
chrono = "0.4.31"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
surf = { version = "2.3" }
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.45"

[[example]]
name = "async"
required-features = ["carbide_core/async-std"]

[[example]]
name = "async_tokio"
required-features = ["carbide_core/tokio"]
