[package]
name = "carbide_wgpu_3d"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu.workspace = true
carbide_wgpu = { path = "../carbide_wgpu" }
carbide_core = { path = "../../carbide_core" }
carbide_3d = { path = "../../carbide_3d" }
bytemuck.workspace = true
encase = { version = "0.9", features = ["cgmath"] }
include_dir.workspace = true
once_cell.workspace = true
dashmap.workspace = true
