[package]
name = "carbide_windows"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"



[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.28.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}