[package]
name = "carbide_winit"
version = "0.70.0"
authors = [
    "Mitchell Nordine <mitchell.nordine@gmail.com>",
    "Sven Nilsen <bvssvni@gmail.com>"
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "A crate to convert from winit types to equivalents in carbide"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]
edition="2018"


[dependencies]
winit = "0.26.1"
carbide_core = { path = "../../carbide_core", version = "0.70" }
