[package]
name = "carbide_winit"
version = { workspace = true }
authors = [
    "Mitchell Nordine <mitchell.nordine@gmail.com>",
    "Sven Nilsen <bvssvni@gmail.com>"
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "A crate to convert from winit types to equivalents in carbide"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]
edition="2021"


[dependencies]
winit.workspace = true
carbide_core = { path = "../../carbide_core" }
dashmap.workspace = true
once_cell.workspace = true
accesskit.workspace = true
accesskit_winit.workspace = true
