[package]
name = "carbide_winit"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "A crate to convert from winit types to equivalents in carbide"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]


[dependencies]
winit.workspace = true
carbide_core = { path = "../../carbide_core" }
dashmap.workspace = true
once_cell.workspace = true
accesskit.workspace = true
accesskit_winit.workspace = true
