[package]
name = "conrod_glium"
version = "0.70.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
categories = ["gui"]

[lib]
name = "conrod_glium"
path = "./src/lib.rs"

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.70" }
glium = "0.24"
conrod_winit = { path = "../conrod_winit", version = "0.70" }
winit = "0.19"
find_folder = "0.3.0"
image = "0.22"
uuid = { version = "0.8.1", features = ["serde", "v4"]}

[dev-dependencies]
conrod_example_shared = { path = "../conrod_example_shared", version = "0.70" }

petgraph = "0.4"
rand = "0.7"

